k8s/deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: demoApp
spec:
  selector:
    matchLabels:
      app: demoApp
  replicas: 2
  template:
    metadata:
      labels:
        app: demoApp
    spec:
      containers:
      - name: 241099261431.dkr.ecr.us-east-1.amazonaws.com/jesse-ccits/demo-app:latest
        image: 
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: demoService
spec:
  selector:
    app: demoApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
